--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,13 +21,14 @@
       "~/*": ["./src/*"]
     }
   },
+  "types": ["node", "jest", "@testing-library/jest-dom", "@testing-library/react", "@testing-library/user-event"],
   "include": [
     ".eslintrc.cjs",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs"
+    "**/*.mjs",
   ],
   "exclude": ["node_modules"]
 }
