--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.4.1",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.29.25",
