--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "scripts": {
-    "vercel-build": "next build && prisma db seed",
+    "vercel-build": "next build && prisma db push && prisma db seed",
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
