--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "scripts": {
+    "vercel-build": "next build && prisma db push && prisma db seed",
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
@@ -18,6 +19,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.4.1",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.29.25",
